--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bottlejs": "^1.4.0",
+    "bottlejs": "1.5.0",
     "chai": "^3.5.0",
     "lodash": "^4.14.1"
   },
