--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "bottlejs": "1.5.0",
-    "chai": "^3.5.0",
-    "lodash": "^4.14.1"
+    "chai": "3.5.0",
+    "lodash": "4.14.1"
   },
   "devDependencies": {
-    "cucumber": "^1.2.1"
+    "cucumber": "1.2.1"
   }
 }
