--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "npm-watch",
-    "test:all": "./node_modules/cucumber/bin/cucumber.js features/"
+    "test:all": "./node_modules/cucumber/bin/cucumber.js features/",
+    "compile": "babel ./ -d ./ --ignore node_modules,assets,features",
+    "prepublish": "npm run compile"
   },
   "watch": {
     "test:all": {
@@ -28,6 +30,9 @@
     "verror": "1.9.0"
   },
   "devDependencies": {
+    "babel-cli": "6.24.0",
+    "babel-core": "6.24.0",
+    "babel-preset-es2015": "6.24.0",
     "cucumber": "1.2.1",
     "npm-watch": "0.1.6"
   }
