--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "dependencies": {
     "bottlejs": "1.5.0",
     "chai": "3.5.0",
+    "lab-test": "0.0.3",
+    "lab-config": "1.0.0",
     "lodash": "4.14.1",
     "verror": "1.9.0"
   },
