--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "npm-watch",
-    "test:all": "./node_modules/cucumber/bin/cucumber.js ./features --compiler es6:babel-core/register --require ./features ",
+    "test:all": "./node_modules/cucumber/bin/cucumber.js ./features --require ./node_modules/@babel/register/lib --require ./features",
     "compile": "babel ./ -d ./ --ignore node_modules,assets,features",
     "prepublish": "npm run compile"
   },
@@ -33,9 +33,11 @@
     "verror": "1.10.0"
   },
   "devDependencies": {
-    "babel-cli": "6.24.0",
-    "babel-core": "6.24.0",
-    "babel-preset-es2015": "6.24.0",
+    "@babel/cli": "7.2.3",
+    "@babel/core": "7.3.4",
+    "@babel/polyfill": "7.2.5",
+    "@babel/preset-env": "7.3.4",
+    "@babel/register": "7.0.0",
     "cucumber": "1.3.2",
     "npm-watch": "0.1.6"
   }
